# ambimorse

./: CMakeLists.txt  README.md
include/: ambimorse.h  morse.h
src/: ambimorse.c  main.c  morse.c
